--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <title>OdekakeCheck</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>おでかけチェック</title>
+    <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
