--- a/app/javascript/stylesheets/Modal.css
+++ b/app/javascript/stylesheets/Modal.css
@@ -29,7 +29,13 @@
   color: #263D48;
 }
 
-.item-form-wrapper input[type="text"] {
+.item-form-wrapper label {
+  font-size: 25px;
+  color: #263D48;
+}
+
+.item-form-wrapper input[type="text"],
+.item-form-wrapper input[type="password"] {
   width: 100%;
   height: 55px;
   margin-top: 8px;
