--- a/app/javascript/stylesheets/header.css
+++ b/app/javascript/stylesheets/header.css
@@ -21,37 +21,19 @@ header {
   color: #2488f7;
 }
 
-.login-btn {
+.logout-btn {
   margin-right: 10px;
-  width: 150px;
-  background: #2cbb95;
-  border: 3px solid #2cbb95;
-  border-radius: 15px;
-  font-size: 28px;
-  font-weight: 600;
-  color: #FEFEFE;
-  cursor: pointer;
-}
-
-.login-btn:hover {
-  background: #FEFEFE;
-  color: #2cbb95;
-  transition: all 0.3s ease;
-}
-
-.signup-btn {
-  margin-right: 10px;
-  width: 150px;
+  width: 160px;
   background: #2488f7;
   border: 3px solid #2488f7;
   border-radius: 15px;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 550;
   color: #FEFEFE;
   cursor: pointer;
 }
 
-.signup-btn:hover {
+.logout-btn:hover {
   background-color: #FEFEFE;
   color: #2488f7;
   transition: all 0.3s ease;
